Refactor Code and remove logs

--- a/app/src/main/res/layout/activity_screen.xml
+++ b/app/src/main/res/layout/activity_screen.xml
@@ -19,7 +19,7 @@
         android:id="@+id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@{viewmodel.text1}"
+        android:text="@{viewmodel.headingText}"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -40,7 +40,7 @@
         android:id="@+id/text3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@{viewmodel.text2}"
+        android:text="@{viewmodel.buttonText}"
         android:onClick="@{() -> viewmodel.fetchGitDetails()}"
         android:textColor="@color/black"
         android:textSize="20sp"
