Added packages to organize the code Added LifeCycle Observer

--- a/app/src/main/res/layout/item_commit_list.xml
+++ b/app/src/main/res/layout/item_commit_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewmodel"
-            type="com.example.sampletestapp.dagger.CommitItemViewModel" />
+            type="com.example.sampletestapp.dagger.views.CommitItemViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
