--- a/app/src/main/res/layout/activity_screen.xml
+++ b/app/src/main/res/layout/activity_screen.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewmodel"
-            type="com.example.sampletestapp.dagger.MainViewModel" />
+            type="com.example.sampletestapp.dagger.views.MainViewModel" />
 
         <import type="android.view.View" />
     </data>
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".dagger.MainActivity">
+        tools:context=".dagger.views.MainActivity">
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
