--- a/app/src/main/res/layout/activity_screen.xml
+++ b/app/src/main/res/layout/activity_screen.xml
@@ -19,12 +19,19 @@
         tools:context=".dagger.views.MainActivity">
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:paddingBottom="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/refresh_button">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="25dp"
                 android:layout_marginHorizontal="15dp">
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -41,27 +48,13 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/commit_list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="25dp"
                     app:adapter="@{viewmodel.commitListAdapter}"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:layout_constraintBottom_toTopOf="@id/refresh_button"
+
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/text1" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/refresh_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:onClick="@{() -> viewmodel.fetchGitDetails()}"
-                    android:text="@{viewmodel.buttonText}"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="@id/text1"
-                    app:layout_constraintTop_toBottomOf="@id/commit_list"
-                    tools:text="H3" />
 
                 <ProgressBar
                     android:layout_width="wrap_content"
@@ -74,5 +67,20 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/refresh_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
+            android:onClick="@{() -> viewmodel.fetchGitDetails()}"
+            android:text="@{viewmodel.buttonText}"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:text="H3" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
